# const-config-len

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
tests/: nest1_len2.json  nest1_lit4.json  nest2_len2.json  root_len3_objects.json  root_map_len2.json  test_macro.rs
