[package]
name = "const-config-size"
version = "0.2.1"
edition = "2024"
authors = ["Stella Cannefax"]
license = "MIT"
description = "read a const usize from an array length, map key count, or integer literal in a .json file"

[dependencies]
quote = "1.0.40"
serde = { version = "1.0.219", features = ["std", "alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.140", features = ["std", "alloc"] }
syn = "2.0.100"

[lib]
proc-macro = true
